name: ParsersCombinatorsHs
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    exampleBig.json
    example.json
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable ParsersCombinatorsHs
  main-is: Main.hs
  buildable: True
  build-depends:
      HUnit -any,
      base -any,
      containers -any
  default-language: Haskell2010
  other-modules:
      JSONParserTests2
      Result
      StandardLib
      Parser
      Combinators
      JSONParserTests
      JSONParser
